rtg_tests/negative/unaddressable_named_array/go.mod
module example.com/rtgtests/negative/unaddressable_named_array

go 1.25
